feat: add i18n runtime support with URL prefix locale routing
- Create @canmi/seam-i18n package (translation lookup, interpolation, fallback)
- Rename packages/eslint-plugin-seam to packages/eslint (package name unchanged)
- Server runtime: locale extraction from URL prefix (/zh/dashboard/alice),
  locale-specific template selection via localeTemplates, _i18n injection
  into __SEAM_DATA__, and <html lang> attribute
- Build pipeline: replace embedded <script id="__seam_i18n"> with exported
  locales/{locale}.json files read by server at startup
- Client: useT() supports interpolation params, SeamDataBridge reads _i18n
  from __SEAM_DATA__ with fallback to deprecated script tag
- Demo locale files renamed from origin to en, seam.toml configs updated

--- a/examples/github-dashboard/seam-app/seam.toml
+++ b/examples/github-dashboard/seam-app/seam.toml
@@ -22,8 +22,8 @@ hash_length = 16
 type_hint = false
 
 [i18n]
-locales = ["origin", "zh"]
-default = "origin"
+locales = ["en", "zh"]
+default = "en"
 
 [dev]
 port = 3000
