--- a/packages/client/react/package.json
+++ b/packages/client/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@canmi/seam-react",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "files": [
     "dist",
     "scripts"
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@canmi/seam-client": "workspace:*",
+    "@canmi/seam-i18n": "workspace:*",
     "esbuild": "^0.25.0"
   },
   "devDependencies": {
