feat: add i18n_keys collection and version hashing to build pipeline
Track A (Rust): compute per-locale content hashes (i18n.versions) in
route manifest; propagate i18n_keys from skeleton output through
process_routes to manifest entries.

Track B (TS): move I18nProvider/useT/useLocale from @canmi/seam-react
to @canmi/seam-i18n/react; skeleton renderer tracks t() calls via
_usedKeys proxy; esbuild externals include @canmi/seam-i18n to avoid
React context duplication.

Fixes: demo apps missing @canmi/seam-i18n dependency; esbuild bundling
@canmi/seam-i18n/react caused separate context instances making key
tracking always empty.

--- a/examples/github-dashboard/frontend/package.json
+++ b/examples/github-dashboard/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "@canmi/seam-client": "workspace:*",
+    "@canmi/seam-i18n": "workspace:*",
     "@canmi/seam-react": "workspace:*",
     "@canmi/seam-tanstack-router": "workspace:*",
     "@github-dashboard/shared": "workspace:*",
