fix: add missing @canmi/seam-i18n dependency to seam-react
cache.mjs imports createI18n from @canmi/seam-i18n but it was not
declared in package.json, causing CI failures when Node subprocess
could not resolve the phantom dependency.

--- a/packages/client/react/package.json
+++ b/packages/client/react/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@canmi/seam-client": "workspace:*",
+    "@canmi/seam-i18n": "workspace:*",
     "esbuild": "^0.25.0"
   },
   "devDependencies": {
