--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "type": "module",
   "scripts": {
+    "lint:deps": "knip --include dependencies,unlisted,unresolved",
     "lint": "oxlint && NODE_OPTIONS='--import tsx/esm' eslint . && cargo clippy --workspace --all-features --all-targets -- -D warnings",
     "lint:oxlint": "oxlint",
     "lint:eslint": "NODE_OPTIONS='--import tsx/esm' eslint .",
@@ -61,6 +62,7 @@
     "eslint": "^10.0.0",
     "eslint-plugin-oxlint": "^1.46.0",
     "hono": "^4.12.2",
+    "knip": "^5.85.0",
     "oxfmt": "^0.32.0",
     "oxlint": "^1.47.0",
     "tsx": "^4.21.0",
