--- a/packages/cli/pkg/package.json
+++ b/packages/cli/pkg/package.json
@@ -14,6 +14,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "postcss": "^8.5.0",
     "rolldown": "^1.0.0-rc.5"
   },
   "devDependencies": {
