feat: add seam-engine Rust crate with page assembly and data structuring
Pure-logic crate extracting duplicated server logic into a shared engine:
- escape.rs: ascii_escape_json (moved from seam-server)
- page.rs: flatten_for_slots, build_seam_data with per-layout _layouts
  grouping, filter_i18n_messages, inject helpers, i18n_query
- render.rs: render_page single entry point for template injection
- build.rs: parse_build_output with layout chain + loader key assignment

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
   "packages/server/adapter/axum",
   "packages/server/injector/rust",
   "packages/server/injector/wasm",
+  "packages/server/engine/rust",
   "packages/cli/core",
   "examples/standalone/server-rust",
   "examples/github-dashboard/backends/rust-axum",
