fix: per-layout _layouts grouping in Rust and Go backends
Replace single layout_id + page_loader_keys split with layout_chain
(Vec<LayoutChainEntry>) that tracks each layout's loader keys independently.
This matches the TS reference implementation where nested layouts get their
own _layouts[id] entries instead of all merging under one key.

Rust escape.rs now re-exports from seam-engine.

--- a/packages/server/adapter/axum/Cargo.toml
+++ b/packages/server/adapter/axum/Cargo.toml
@@ -16,6 +16,7 @@ workspace = true
 [dependencies]
 axum = "0.8"
 futures-core = "0.3"
+seam-engine = { version = "0.3.5", path = "../../engine/rust" }
 seam-injector = { version = "0.3.5", path = "../../injector/rust" }
 seam-server = { version = "0.3.5", path = "../../core/rust" }
 serde = { version = "1", features = ["derive"] }
