--- a/packages/server/core/rust/Cargo.toml
+++ b/packages/server/core/rust/Cargo.toml
@@ -18,5 +18,6 @@ futures-core = "0.3"
 seam-macros = { version = "0.3.5", path = "../rust-macros" }
 serde = { version = "1", features = ["derive"] }
 seam-injector = { version = "0.3.5", path = "../../injector/rust" }
+seam-engine = { version = "0.3.5", path = "../../engine/rust" }
 serde_json = "1"
 regex = "1"
