feat: add WASM bindings + JS bridge + Go bridge for seam-engine
- seam-engine-wasm: wasm-bindgen wrappers for all engine functions plus
  re-exported injector functions (superset of injector WASM)
- @canmi/seam-engine JS bridge: typed exports matching injector pattern
- engine/go: wazero bridge with generalized callWasm for N string args
- build-wasm.sh: builds WASM and distributes to js/pkg/ and go/

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "packages/server/injector/rust",
   "packages/server/injector/wasm",
   "packages/server/engine/rust",
+  "packages/server/engine/wasm",
   "packages/cli/core",
   "examples/standalone/server-rust",
   "examples/github-dashboard/backends/rust-axum",
