--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages/server/core/typescript",
     "packages/server/injector/js",
     "packages/server/injector/native",
+    "packages/server/engine/js",
     "packages/server/adapter/bun",
     "packages/server/adapter/node",
     "packages/server/adapter/hono",
@@ -40,7 +41,7 @@
     "fmt:rust": "cargo fmt --all",
     "fmt:check": "oxfmt --check . && dprint check && cargo fmt --all -- --check",
     "fmt:path": "chore .",
-    "build:ts:p1": "bun run --filter '@canmi/seam-injector' build && bun run --filter '@canmi/seam-injector-native' build && bun run --filter '@canmi/seam-client' build && bun run --filter '@canmi/seam-cli' build && bun run --filter '@canmi/seam-i18n' build",
+    "build:ts:p1": "bun run --filter '@canmi/seam-injector' build && bun run --filter '@canmi/seam-injector-native' build && bun run --filter '@canmi/seam-engine' build && bun run --filter '@canmi/seam-client' build && bun run --filter '@canmi/seam-cli' build && bun run --filter '@canmi/seam-i18n' build",
     "build:ts:p2": "bun run --filter '@canmi/seam-server' build && bun run --filter '@canmi/seam-react' build",
     "build:ts:p3": "bun run --filter '@canmi/seam-adapter-hono' build && bun run --filter '@canmi/seam-adapter-bun' build && bun run --filter '@canmi/seam-adapter-node' build && bun run --filter '@canmi/seam-tanstack-router' build",
     "build:ts": "bun run build:ts:p1 && bun run build:ts:p2 && bun run build:ts:p3",
