refactor: migrate TS backend to @canmi/seam-engine
Replace @canmi/seam-injector dependency with @canmi/seam-engine in
seam-server. Simplify handlePageRequest: compose template via outlet
substitution, then call renderPage (single WASM call) for slot injection,
data assembly, and script injection. Remove local flattenForSlots,
asciiEscapeJson, injectLayout functions.

--- a/packages/server/core/typescript/package.json
+++ b/packages/server/core/typescript/package.json
@@ -16,7 +16,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@canmi/seam-injector": "workspace:*",
+    "@canmi/seam-engine": "workspace:*",
     "jtd": "^0.1.1"
   },
   "devDependencies": {
