refactor: extract shared build-wasm.sh and gitignore WASM artifacts
- Extract duplicate build-wasm.sh logic into scripts/build-wasm.sh
- Rename wasm-pack outputs to clean names (injector.js, engine.js, etc.)
- Auto-generate glue .d.ts from entry types (no manual maintenance)
- Remove WASM build artifacts from git tracking
- Add pkg/ to chore.toml exclude dirs

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ examples/github-dashboard/backends/go-gin/server
 examples/github-dashboard/backends/go-gin/server-go
 examples/github-dashboard/.seam/
 
+# WASM build artifacts (regenerate via build-wasm.sh)
+packages/server/*/js/pkg/
+packages/server/*/go/*.wasm
+
 # Next.js
 .next/
 next-env.d.ts
