feat(i18n-demo): add i18n demo example with dual resolve modes
- Create examples/i18n-demo/ with minimal React + TanStack Router frontend
- Rust backend (i18n-demo-axum) supports I18N_MODE=prefix|hidden via env var
- prefix mode: URL-visible locale (/en/, /zh/) via from_url_prefix()
- hidden mode: cookie/query/accept-language chain, no URL prefix
- Add cleanLocaleQuery utility to @canmi/seam-i18n for stripping ?lang= after hydration
- Wire cleanLocaleQuery option through SeamRouterOptions -> SeamDataBridge

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
   "packages/cli/core",
   "examples/standalone/server-rust",
   "examples/github-dashboard/backends/rust-axum",
+  "examples/i18n-demo/backend",
 ]
 
 [workspace.lints.clippy]
