fix(i18n-demo): build fixes, locale-prefix basepath, cleanLocaleQuery
- Add backend_build_command to trigger fullstack build (asset packaging)
- Add loaders/mock to leaf routes (required by skeleton renderer)
- Add i18n-demo/seam-app to bun workspace for vite resolution
- Fix layout: defer window.location access to useEffect (SSR compat)
- Fix locale switcher: navigate via URL in prefix mode, cookie in hidden
- Fix TanStack Router hydration: detect locale prefix from _i18n, strip
  before route matching, pass basepath to createTanStackRouter
- Enable cleanLocaleQuery for hidden mode UX (strip ?lang= after hydrate)
- Add .gitignore for build artifacts

--- a/examples/i18n-demo/seam-app/seam.toml
+++ b/examples/i18n-demo/seam-app/seam.toml
@@ -8,6 +8,7 @@ lang = "typescript"
 entry = "src/client/main.tsx"
 
 [build]
+backend_build_command = "true"
 bundler_command = "bunx vite build"
 bundler_manifest = "dist/.vite/manifest.json"
 router_file = "src/server/router.ts"
