--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "test:rs": "cargo test --workspace",
     "test:ts": "bun run --filter '@canmi/seam-injector' test && bun run --filter '@canmi/seam-server' test && bun run --filter '@canmi/seam-injector-native' test && bun run --filter '@canmi/seam-adapter-hono' test && bun run --filter '@canmi/seam-adapter-bun' test && bun run --filter '@canmi/seam-adapter-node' test && bun run --filter '@canmi/seam-client' test && bun run --filter '@canmi/seam-react' test && bun run --filter '@canmi/seam-tanstack-router' test && bun run --filter '@canmi/eslint-plugin-seam' test && bun run --filter '@canmi/seam-i18n' test",
     "test:unit": "bun run test:rs && bun run test:ts",
-    "test:integration": "cd tests/integration && go test -v -count=1 && cd ../fullstack && go test -v -count=1 && cd ../workspace-integration && go test -v -count=1 -timeout 120s",
+    "test:integration": "cd tests/integration && go test -v -count=1 && cd ../fullstack && go test -v -count=1 && cd ../i18n && go test -v -count=1 && cd ../workspace-integration && go test -v -count=1 -timeout 120s",
     "test:e2e": "cd tests/e2e && bunx playwright test",
     "test:all": "bun run test:unit && bun run test:integration && bun run test:e2e",
     "test": "bun run test:all",
