chore: migrate package manager from bun to pnpm
bun remains as runtime (Bun.serve, bun --watch, bun build --target=bun).
pnpm replaces bun for install, scripts, publish, and workspace management.

--- a/examples/github-dashboard/seam.toml
+++ b/examples/github-dashboard/seam.toml
@@ -7,7 +7,7 @@ data_id = "__data"
 
 [build]
 routes = "frontend/src/client/routes.ts"
-bundler_command = "cd frontend && bunx vite build"
+bundler_command = "cd frontend && pnpm exec vite build"
 bundler_manifest = "frontend/dist/.vite/manifest.json"
 out_dir = ".seam/output"
 obfuscate = true
