--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,12 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
 
-      - uses: oven-sh/setup-bun@v2
-      - run: bun install
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: pnpm
+      - run: pnpm install
 
       - uses: actions/setup-go@v5
         with:
@@ -32,7 +36,7 @@ jobs:
         run: bash scripts/ci/build-cli.sh
 
       - name: Build WASM
-        run: cargo install wasm-pack && bun run build:wasm
+        run: cargo install wasm-pack && pnpm build:wasm
 
       - name: Build TS
         run: bash scripts/ci/build-ts.sh
@@ -55,7 +59,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Playwright
-        run: bunx playwright install --with-deps chromium
+        run: pnpm exec playwright install --with-deps chromium
 
       - name: Playwright E2E
         run: bash scripts/ci/test-e2e.sh
