--- a/package.json
+++ b/package.json
@@ -1,7 +1,33 @@
 {
   "name": "seam",
   "private": true,
-  "packageManager": "pnpm@10.30.3",
+  "workspaces": [
+    "packages/server/core/typescript",
+    "packages/server/injector/js",
+    "packages/server/injector/native",
+    "packages/server/engine/js",
+    "packages/server/adapter/bun",
+    "packages/server/adapter/node",
+    "packages/server/adapter/hono",
+    "packages/client/vanilla",
+    "packages/client/react",
+    "packages/client/tanstack-router",
+    "packages/eslint",
+    "packages/i18n",
+    "packages/cli/pkg",
+    "examples/standalone/server-bun",
+    "examples/standalone/server-node",
+    "examples/standalone/client-vanilla",
+    "examples/standalone/client-react",
+    "examples/github-dashboard/shared",
+    "examples/github-dashboard/backends/ts-hono",
+    "examples/github-dashboard/frontend",
+    "examples/github-dashboard/seam-app",
+    "examples/github-dashboard/next-app",
+    "examples/i18n-demo/seam-app",
+    "tests/e2e/fixture",
+    "tests/e2e"
+  ],
   "type": "module",
   "scripts": {
     "lint:deps": "knip --include dependencies,unlisted,unresolved",
@@ -16,20 +42,20 @@
     "fmt:rust": "cargo fmt --all",
     "fmt:check": "oxfmt --check . && dprint check && cargo fmt --all -- --check",
     "fmt:path": "chore .",
-    "build:ts:p1": "pnpm --filter '@canmi/seam-injector' build && pnpm --filter '@canmi/seam-injector-native' build && pnpm --filter '@canmi/seam-engine' build && pnpm --filter '@canmi/seam-client' build && pnpm --filter '@canmi/seam-cli' build && pnpm --filter '@canmi/seam-i18n' build",
-    "build:ts:p2": "pnpm --filter '@canmi/seam-server' build && pnpm --filter '@canmi/seam-react' build",
-    "build:ts:p3": "pnpm --filter '@canmi/seam-adapter-hono' build && pnpm --filter '@canmi/seam-adapter-bun' build && pnpm --filter '@canmi/seam-adapter-node' build && pnpm --filter '@canmi/seam-tanstack-router' build",
-    "build:ts": "pnpm build:ts:p1 && pnpm build:ts:p2 && pnpm build:ts:p3",
+    "build:ts:p1": "bun run --filter '@canmi/seam-injector' build && bun run --filter '@canmi/seam-injector-native' build && bun run --filter '@canmi/seam-engine' build && bun run --filter '@canmi/seam-client' build && bun run --filter '@canmi/seam-cli' build && bun run --filter '@canmi/seam-i18n' build",
+    "build:ts:p2": "bun run --filter '@canmi/seam-server' build && bun run --filter '@canmi/seam-react' build",
+    "build:ts:p3": "bun run --filter '@canmi/seam-adapter-hono' build && bun run --filter '@canmi/seam-adapter-bun' build && bun run --filter '@canmi/seam-adapter-node' build && bun run --filter '@canmi/seam-tanstack-router' build",
+    "build:ts": "bun run build:ts:p1 && bun run build:ts:p2 && bun run build:ts:p3",
     "build:wasm": "bash packages/server/injector/build-wasm.sh && bash packages/server/engine/build-wasm.sh",
     "build:rs": "cargo build --workspace",
-    "build": "pnpm build:ts && pnpm build:rs",
+    "build": "bun run build:ts && bun run build:rs",
     "test:rs": "cargo test --workspace",
-    "test:ts": "pnpm --filter '@canmi/seam-injector' test && pnpm --filter '@canmi/seam-server' test && pnpm --filter '@canmi/seam-injector-native' test && pnpm --filter '@canmi/seam-adapter-hono' test && pnpm --filter '@canmi/seam-adapter-bun' test && pnpm --filter '@canmi/seam-adapter-node' test && pnpm --filter '@canmi/seam-client' test && pnpm --filter '@canmi/seam-react' test && pnpm --filter '@canmi/seam-tanstack-router' test && pnpm --filter '@canmi/eslint-plugin-seam' test && pnpm --filter '@canmi/seam-i18n' test",
-    "test:unit": "pnpm test:rs && pnpm test:ts",
+    "test:ts": "bun run --filter '@canmi/seam-injector' test && bun run --filter '@canmi/seam-server' test && bun run --filter '@canmi/seam-injector-native' test && bun run --filter '@canmi/seam-adapter-hono' test && bun run --filter '@canmi/seam-adapter-bun' test && bun run --filter '@canmi/seam-adapter-node' test && bun run --filter '@canmi/seam-client' test && bun run --filter '@canmi/seam-react' test && bun run --filter '@canmi/seam-tanstack-router' test && bun run --filter '@canmi/eslint-plugin-seam' test && bun run --filter '@canmi/seam-i18n' test",
+    "test:unit": "bun run test:rs && bun run test:ts",
     "test:integration": "cd tests/integration && go test -v -count=1 && cd ../fullstack && go test -v -count=1 && cd ../i18n && go test -v -count=1 && cd ../workspace-integration && go test -v -count=1 -timeout 120s",
-    "test:e2e": "cd tests/e2e && pnpm exec playwright test",
-    "test:all": "pnpm test:unit && pnpm test:integration && pnpm test:e2e",
-    "test": "pnpm test:all",
+    "test:e2e": "cd tests/e2e && bunx playwright test",
+    "test:all": "bun run test:unit && bun run test:integration && bun run test:e2e",
+    "test": "bun run test:all",
     "typecheck": "bash scripts/ci/typecheck.sh",
     "verify": "bash scripts/verify-all.sh"
   },
