fix: handle dot-namespaced procedure names in TS codegen
Procedure names like "user.getProfile" produced invalid TS identifiers.
Fix: flatten dots to PascalCase for type names (UserGetProfileInput),
quote dotted property keys ("user.getProfile": ...) in interfaces and
factory objects. Also add missing @canmi/seam-client dep to server-bun
example.

--- a/examples/standalone/server-bun/package.json
+++ b/examples/standalone/server-bun/package.json
@@ -5,6 +5,10 @@
   "type": "module",
   "dependencies": {
     "@canmi/seam-adapter-bun": "workspace:*",
+    "@canmi/seam-client": "workspace:*",
     "@canmi/seam-server": "workspace:*"
+  },
+  "devDependencies": {
+    "@types/node": "^22"
   }
 }
