fix: resolve channel event type references in codegen meta map
Channel event subscriptions (e.g. chat.events) in SeamProcedureMeta
now reference the correct types (ChatChannelInput / ChatEvent) instead
of generating non-existent ChatEventsInput / ChatEventsOutput.

Also update client-vanilla example to exercise query, command, and
subscription procedure types for end-to-end verification.

--- a/examples/standalone/client-vanilla/package.json
+++ b/examples/standalone/client-vanilla/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@canmi/seam-client": "workspace:*"
+    "@canmi/seam-client": "workspace:*",
+    "eventsource": "^4.1.0"
   }
 }
