--- a/packages/server/adapter/axum/Cargo.toml
+++ b/packages/server/adapter/axum/Cargo.toml
@@ -14,11 +14,12 @@ categories = ["web-programming::http-server"]
 workspace = true
 
 [dependencies]
-axum = "0.8"
+axum = { version = "0.8", features = ["ws"] }
 futures-core = "0.3"
-seam-engine = { version = "0.4.7", path = "../../engine/rust" }
-seam-injector = { version = "0.4.7", path = "../../injector/rust" }
-seam-server = { version = "0.4.7", path = "../../core/rust" }
+futures-util = "0.3"
+seam-engine = { version = "0.4.8", path = "../../engine/rust" }
+seam-injector = { version = "0.4.8", path = "../../injector/rust" }
+seam-server = { version = "0.4.8", path = "../../core/rust" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
