--- a/packages/server/adapter/node/package.json
+++ b/packages/server/adapter/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@canmi/seam-adapter-node",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "files": [
     "dist"
   ],
@@ -18,9 +18,13 @@
   "devDependencies": {
     "@canmi/seam-server": "workspace:*",
     "@types/node": "^22.0.0",
+    "@types/ws": "^8.5.0",
     "tsdown": "^0.20.0",
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
+  },
+  "dependencies": {
+    "ws": "^8.18.0"
   },
   "peerDependencies": {
     "@canmi/seam-server": "workspace:*"
