docs: reorganize into protocol/ and architecture/, add link checker
Move 6 protocol specs into docs/protocol/ and 3 layer overviews into
docs/architecture/. Extract JTD schema reference and error codes into
standalone files to eliminate duplication across procedure-manifest.md
and subscription-protocol.md. Sync development.md test table with
CLAUDE.md (add test:rs, test:ts). Add scripts/ci/check-links.sh for
markdown link validation, integrated into the lint pipeline.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   ],
   "type": "module",
   "scripts": {
+    "lint:links": "bash scripts/ci/check-links.sh",
     "lint:deps": "knip --include dependencies,unlisted,unresolved",
     "lint": "oxlint && NODE_OPTIONS='--import tsx/esm' eslint . && cargo clippy --workspace --all-features --all-targets -- -D warnings",
     "lint:oxlint": "oxlint",
