refactor: consolidate bundler output from dist/ into .seam/dist/
Unify all build artifacts under the .seam/ umbrella directory.
The bundler intermediate output moves from dist/ to .seam/dist/,
eliminating root-level dist/ confusion and fixing the inconsistent
out_dir default between config.rs and clean.rs.

--- a/examples/github-dashboard/seam.toml
+++ b/examples/github-dashboard/seam.toml
@@ -8,7 +8,7 @@ data_id = "__data"
 [build]
 routes = "frontend/src/client/routes.ts"
 bundler_command = "cd frontend && bunx vite build"
-bundler_manifest = "frontend/dist/.vite/manifest.json"
+bundler_manifest = "frontend/.seam/dist/.vite/manifest.json"
 out_dir = ".seam/output"
 obfuscate = true
 hash_length = 16
