--- a/examples/github-dashboard/seam-app/seam.toml
+++ b/examples/github-dashboard/seam-app/seam.toml
@@ -13,7 +13,7 @@ data_id = "__data"
 [build]
 backend_build_command = "bun build src/server/index.ts --target=bun --outdir=.seam/output/server"
 bundler_command = "bunx vite build"
-bundler_manifest = "dist/.vite/manifest.json"
+bundler_manifest = ".seam/dist/.vite/manifest.json"
 router_file = "src/server/router.ts"
 routes = "./src/client/routes.ts"
 out_dir = ".seam/output"
