--- a/examples/i18n-demo/seam-app/seam.toml
+++ b/examples/i18n-demo/seam-app/seam.toml
@@ -10,7 +10,7 @@ entry = "src/client/main.tsx"
 [build]
 backend_build_command = "true"
 bundler_command = "bunx vite build"
-bundler_manifest = "dist/.vite/manifest.json"
+bundler_manifest = ".seam/dist/.vite/manifest.json"
 router_file = "src/server/router.ts"
 routes = "./src/client/routes.ts"
 out_dir = ".seam/output"
