feat: codegen meta.ts for dependency-free DATA_ID; E2E custom data_id test; bump 0.4.10
Split DATA_ID into standalone meta.ts with zero imports so bundlers
do not pull in @canmi/seam-client when only the constant is needed.
client.ts re-exports DATA_ID from meta.js for backward compatibility.

E2E fixture uses data_id = "__e2e" and imports from meta.js to verify
custom data_id hydration works end-to-end.

Also consolidate .gitignore: add .seam/ to root, remove redundant
sub-project entries.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules/
 target/
 dist/
 .turbo/
+.seam/
 .plans/
 *.swp
 .claude
@@ -13,13 +14,10 @@ generated/
 tests/e2e/test-results/
 tests/e2e/playwright-report/
 
-# E2E fixture build output
-tests/e2e/fixture/.seam/
 examples/standalone/server-go/server-go
 examples/github-dashboard/backends/go-gin/go-gin
 examples/github-dashboard/backends/go-gin/server
 examples/github-dashboard/backends/go-gin/server-go
-examples/github-dashboard/.seam/
 
 # WASM build artifacts (regenerate via build-wasm.sh)
 packages/server/*/js/pkg/
