--- a/tests/e2e/fixture/seam.toml
+++ b/tests/e2e/fixture/seam.toml
@@ -8,6 +8,7 @@ port = 3000
 
 [frontend]
 entry = "src/client/main.tsx"
+data_id = "__e2e"
 
 [build]
 backend_build_command = "bun build src/server/index.ts --target=bun --outdir=.seam/output/server"
