--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,12 @@ members = [
   "examples/i18n-demo/backend",
 ]
 
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+panic = "abort"
+
 [workspace.lints.clippy]
 too_many_lines = "warn"
 
