chore: add gofmt to fmt and fmt:check scripts

--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "lint:eslint": "NODE_OPTIONS='--import tsx/esm' eslint .",
     "lint:clippy": "cargo clippy --workspace --all-features --all-targets -- -D warnings",
     "lint:fix": "oxlint --fix && NODE_OPTIONS='--import tsx/esm' eslint . --fix",
-    "fmt": "chore . && oxfmt --write . && dprint fmt && cargo fmt --all",
+    "fmt": "chore . && oxfmt --write . && dprint fmt && cargo fmt --all && gofmt -w .",
     "fmt:oxfmt": "oxfmt --write .",
     "fmt:md": "dprint fmt",
     "fmt:rust": "cargo fmt --all",
-    "fmt:check": "oxfmt --check . && dprint check && cargo fmt --all -- --check",
+    "fmt:go": "gofmt -w .",
+    "fmt:check": "oxfmt --check . && dprint check && cargo fmt --all -- --check && test -z \"$(gofmt -l .)\"",
     "fmt:path": "chore .",
     "build:ts:p1": "bun run --filter '@canmi/seam-injector' build && bun run --filter '@canmi/seam-injector-native' build && bun run --filter '@canmi/seam-engine' build && bun run --filter '@canmi/seam-client' build && bun run --filter '@canmi/seam-cli' build && bun run --filter '@canmi/seam-i18n' build",
     "build:ts:p2": "bun run --filter '@canmi/seam-server' build && bun run --filter '@canmi/seam-react' build",
