refactor(wasm): remove externref table and use stack-pointer return convention
wasm-bindgen no longer emits __wbindgen_init_externref_table or
__wbindgen_start; results are returned via the stack pointer instead of
multi-value returns. Update JS and Go WASM bridges accordingly, add
wasm-opt to release profile, and remove the obsolete .d.ts export line
from build-wasm.sh.

--- a/src/server/engine/wasm/Cargo.toml
+++ b/src/server/engine/wasm/Cargo.toml
@@ -18,3 +18,6 @@ seam-engine = { version = "0.4.10", path = "../rust" }
 seam-injector = { version = "0.4.10", path = "../../injector/rust" }
 serde_json = "1"
 wasm-bindgen = "0.2"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-O", "--all-features"]
