--- a/src/client/tanstack-router/package.json
+++ b/src/client/tanstack-router/package.json
@@ -14,6 +14,10 @@
     "./routes": {
       "types": "./dist/define-routes.d.ts",
       "import": "./dist/define-routes.js"
+    },
+    "./i18n": {
+      "types": "./dist/i18n.d.ts",
+      "import": "./dist/i18n.js"
     }
   },
   "scripts": {
@@ -22,10 +26,10 @@
   },
   "dependencies": {
     "@canmi/seam-client": "workspace:*",
-    "@canmi/seam-i18n": "workspace:*",
     "@canmi/seam-react": "workspace:*"
   },
   "devDependencies": {
+    "@canmi/seam-i18n": "workspace:*",
     "@tanstack/react-router": "^1.163.3",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
@@ -35,8 +39,14 @@
     "vitest": "^4.0.18"
   },
   "peerDependencies": {
+    "@canmi/seam-i18n": "workspace:*",
     "@tanstack/react-router": "^1.0.0",
     "react": "^18.0.0 || ^19.0.0",
     "react-dom": "^18.0.0 || ^19.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@canmi/seam-i18n": {
+      "optional": true
+    }
   }
 }
